hari ke 3 dirumah

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xKjaipf6V99NxHCG8xjeosdNZsB/SC/tmm/94qKZup0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
